# lance-demo

./: .gitignore  README.md  build_notebook.py  colab_textvqa_lance.ipynb  eda_explore.ipynb  pyproject.toml
notebooks/: build_notebook.py  colab_textvqa_lance.ipynb
vlm/: __init__.py  backfill_direct.py  backfill_geneva.py  colab_prepare.py  geneva_udfs.py  ingest.py  slice_experiment.py  slices.py
