[project]
name = "tmls-2026-demo"
version = "0.1.0"
description = "TMLS 2026 workshop — VLM fine-tune (Qwen2.5-VL-3B + LoRA) on TextVQA with LanceDB"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Data layer — LanceDB + Geneva
    "lancedb>=0.30.2",
    "pylance>=3.0.0",
    "geneva==0.12.0",
    "pyarrow>=15.0.0",
    "numpy>=1.26.0",
    # HF data + hub (ingest, Colab bake upload)
    "datasets>=2.18.0",
    "huggingface-hub>=0.24.0",
    "tqdm>=4.66.0",
    "Pillow>=10.0.0",
    # Training / eval stack (GPU)
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "transformers>=4.49.0",   # Qwen2.5-VL
    "qwen-vl-utils>=0.0.8",
    "accelerate>=1.0.0",
    "peft>=0.13.0",
    "bitsandbytes>=0.43.0",   # NF4 QLoRA for the Colab T4 path
    "sentencepiece>=0.2.0",
    "matplotlib>=3.7.0",      # EDA plots in the notebook
    "polars>=1.41.2",
]

[project.scripts]
vlm-ingest    = "vlm.ingest:main"
vlm-backfill  = "vlm.backfill_geneva:main"
vlm-train     = "vlm.train_qwen25vl_lora:main"
vlm-eval      = "vlm.eval:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vlm"]
